--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"lint": "eslint",
 		"dev": "webpack --watch",
-		"test": "echo \"Error: no test specified\" && exit 1",
+		"test": "jest",
 		"build": "webpack",
 		"deploy": "git subtree push --prefix dist origin gh-pages",
 		"check": "npx prettier . --check",
@@ -20,12 +20,14 @@
 		"@babel/cli": "^7.23.4",
 		"@babel/core": "^7.23.7",
 		"@babel/preset-env": "^7.23.7",
+		"babel-jest": "^29.7.0",
 		"css-loader": "^6.8.1",
 		"eslint": "^8.56.0",
 		"eslint-config-airbnb-base": "^15.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-import": "^2.29.1",
 		"html-webpack-plugin": "^5.6.0",
+		"jest": "^29.7.0",
 		"prettier": "3.1.1",
 		"style-loader": "^3.3.3",
 		"webpack": "^5.89.0",
