--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@babel/core": "^7.23.7",
 		"@babel/preset-env": "^7.23.7",
 		"babel-jest": "^29.7.0",
+		"babel-loader": "^9.1.3",
 		"css-loader": "^6.8.1",
 		"eslint": "^8.56.0",
 		"eslint-config-airbnb-base": "^15.0.0",
